--- a/src/BackendBundle/Resources/views/Default/index.html.twig
+++ b/src/BackendBundle/Resources/views/Default/index.html.twig
@@ -8,7 +8,7 @@
             <div class="row">
                 {% for message in messages %}
                 {% set delete_form = delete_forms[loop.index0] %}
-                <div class="col s12 m4">
+                <div class="col m4">
                     <div class="card">
                         <div class="card-content white-text blue-grey darken-1">
                             <span class="card-title">{{ message.nom }} {{ message.prenom }}</span>
