--- a/src/BackendBundle/Resources/views/base.html.twig
+++ b/src/BackendBundle/Resources/views/base.html.twig
@@ -21,7 +21,7 @@
 
 <nav>
     <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Administration des messages</a>
+        <a href="#" class="brand-logo">{% block logo %}Administration des messages{% endblock %}</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li>{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                     <a class="dropdown-button" href="#!" data-activates="drop-log">{{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} <i class="material-icons right">arrow_drop_down</i></a>
