--- a/src/BackendBundle/Resources/views/base.html.twig
+++ b/src/BackendBundle/Resources/views/base.html.twig
@@ -17,6 +17,11 @@
             {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
         </a>
     </li>
+    <li>
+        <a href="{{ path('fos_user_security_logout') }}">
+            {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+        </a>
+    </li>
 </ul>
 <header class="page-topbar">
     <nav>
@@ -35,12 +40,31 @@
 </header>
 <div class="wrapper">
     <section style="padding-top: 100px">
-        <div class="container">
-            {% block container %}{% endblock %}
+
+        {% for flash_message in app.session.flashBag.get('notice') %}
+            <div class="container">
+                <div class="row">
+                    <div class="col s12 z-depth-5 teal" style="padding: 20px">
+                        <div class="flash-notice">
+                            {{ flash_message }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+
+        <div class="row">
+            <div class="col s12 m10">
+                <div class="container">
+                    {% block container %}{% endblock %}
+                </div>
+            </div>
+            <div class="col s12 m2 teal lighten-5" style="padding: 50px">
+                {% block sidebar %}{% endblock %}
+            </div>
         </div>
     </section>
 </div>
-
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
