--- a/src/BackendBundle/Resources/views/base.html.twig
+++ b/src/BackendBundle/Resources/views/base.html.twig
@@ -13,8 +13,18 @@
 <!-- Dropdown loggin for navbar -->
 <ul id="drop-log" class="dropdown-content">
     <li>
-        <a href="{{ path('fos_user_security_logout') }}">
-            {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+        <a href="{{ path('backend_homepage') }}">
+            Home
+        </a>
+    </li>
+    <li>
+        <a href="{{ path('backend_cv') }}">
+            CV
+        </a>
+    </li>
+    <li>
+        <a href="{{ path('backend_recommendation') }}">
+            Recommendation
         </a>
     </li>
     <li>
@@ -52,16 +62,8 @@
                 </div>
             </div>
         {% endfor %}
-
-        <div class="row">
-            <div class="col s12 m10">
-                <div class="container">
-                    {% block container %}{% endblock %}
-                </div>
-            </div>
-            <div class="col s12 m2 teal lighten-5" style="padding: 50px">
-                {% block sidebar %}{% endblock %}
-            </div>
+        <div class="container">
+            {% block container %}{% endblock %}
         </div>
     </section>
 </div>
